[tool.poetry]
name = "adaboost from scratch experiment"
version = "0.1.0"
description = "PACMANN Adv ML Class Final Project - Creating AdaBoost from Scratch and experiment the model with a sample case"
authors = ["haranobuhardo <haranobuhardo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.0"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
